# testpilot

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/planning/: TestPilot-Architecture.md  TestPilot-Dev-Roadmap.md  TestPilot-MVP-Dev-Guide.md
docs/ui-tests/: test-case.md  test-case1.md  test.md
testpilot/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm.py  runtime_context.py  web.py
testpilot/prompts/: AGENTS.md  SOUL.md
testpilot/skills/: __init__.py  loader.py
testpilot/skills/testing-python/: SKILL.md
testpilot/templates/: index.html
testpilot/tools/: __init__.py  ask_tools.py  exec_tools.py  file_tools.py  registry.py  search_tools.py
tests/: test_agent_loop.py  test_config_security.py  test_exec_tools.py  test_search_tools.py  test_tools_security.py  test_web_api.py
ui-test/: agent-browser-test-report.md
